# procedural-placement-prototype

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/stb/: CMakeLists.txt
src/: CMakeLists.txt  axes.cpp  axes.hpp  boilerplate.cpp  demo.cpp  demo.hpp  entities.cpp  entities.hpp  glfw_init.cpp  glfw_window.cpp  main.cpp  scene.cpp  scene.hpp  terrain.cpp  terrain.hpp
src/gl_utils/: CMakeLists.txt  buffer.cpp  buffer.hpp  gl.cpp  gl.hpp  object_manager.hpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp
src/glfw_utils/: CMakeLists.txt  init.cpp  init.hpp  window.cpp  window.hpp
src/shaders/: axes.frag  axes.vert  blend_textured.frag  heightmap.comp  lighting.frag  lighting.vert  placement.comp  point.frag  point.vert  simple.frag  simple.vert  textured.frag
src/utils/: CMakeLists.txt  camera.cpp  camera.hpp  cube.hpp  image.cpp  image.hpp  shader_load.cpp  shader_load.hpp  texture_load.cpp  texture_load.hpp
